# mds

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: wheels.yml
3rd/: CMakeLists.txt
mds/: CMakeLists.txt
mds/base/: CMakeLists.txt  except.h  file_descriptor.h  file_descriptor_test.cpp  mmap.h  simple8b.cpp  simple8b.h  simple8b_test.cpp
mds/python/: CMakeLists.txt  main.cpp
mds/strlist/: CMakeLists.txt  dumper.cpp  dumper.h  reader.cpp  reader.h  strlist_test.cpp
